# jedox-mirror

molap/client_libraries/5.0/PHPPalo/: ArrayGuard.h  CHANGES  COPYING  MakeWrapperDecl.xslt  MakeWrapperEntries.xslt  Makefile.am  Makefile.in  PHPPalo.vcxproj.filters  PHPPaloContext.cpp  PHPPaloContext.h  PHPPaloException.h  PHPPaloLogger.cpp  PHPPaloLogger.h  PHPPaloMessages.cpp  PHPPaloMessages.h  PHPPaloSpreadsheetFuncs.cpp  PHPPaloSpreadsheetFuncs.h  PHPPaloSpreadsheetFuncsWrapper.cpp  PHPPaloSpreadsheetFuncsWrapper.h  PHPPaloVersion.cpp  PHPPaloVersion.h  PHP_4.4.X_WIN.txt  PHP_5.2.X_WIN.txt  PHP_5.3.X_WIN.txt  PHP_5.4.X_WIN.txt  PHP_5.5.X_WIN.txt  README  ZendArrayBuilderImpl.cpp  ZendArrayBuilderImpl.h  ZendValue.cpp  ZendValue.h  ZendValueException.h  ZendValueIteratorImpl.cpp  ZendValueIteratorImpl.h  ZendValueMessages.cpp  ZendValueMessages.h  aclocal.m4  applyXSLTransforms.sh  c2c_plus_plus.cpp  c2c_plus_plus.h  (+10 more)
molap/client_libraries/5.0/PHPPalo/PHP_5.3.X_WIN_Support/vc10/x64/: config.w32.h
molap/client_libraries/5.0/PHPPalo/PHP_5.3.X_WIN_Support/vc6/x86/: config.w32.h
molap/client_libraries/5.0/PHPPalo/PHP_5.3.X_WIN_Support/vc9/x64/: config.w32.h
molap/client_libraries/5.0/PHPPalo/PHP_5.3.X_WIN_Support/vc9/x64_debug/: config.w32.h
molap/client_libraries/5.0/PHPPalo/PHP_5.3.X_WIN_Support/vc9/x86/: config.w32.h
molap/client_libraries/5.0/PHPPalo/PHP_5.4.X_WIN_Support/: config.w32.h
molap/client_libraries/5.0/PHPPalo/doc/: PHPPalo_ConnectionString.ini  PHPPalo_ResourceId.ini  php_doc_out_ConnectionString.php  php_doc_out_ResourceId.php
molap/client_libraries/5.0/PHPPalo/doc/example/ConnectionString/: palo_afilter.php  palo_cellcopy.php  palo_change_password.php  palo_change_user_password.php  palo_cube_clear.php  palo_cube_info.php  palo_cube_list_dimensions.php  palo_cube_rule_create.php  palo_cube_rule_delete.php  palo_cube_rule_modify.php  palo_cube_rule_parse.php  palo_cube_rules.php  palo_data.php  palo_dataa.php  palo_dataac.php  palo_dataat.php  palo_dataatc.php  palo_dataav.php  palo_database_add_cube.php  palo_database_add_dimension.php  palo_database_delete_cube.php  palo_database_delete_dimension.php  (+74 more)
molap/client_libraries/5.1/PHPPalo/: AUTHORS  ArrayGuard.h  MakeWrappers.xslt  Makefile.in  PHPPalo.vcxproj  PHPPalo.vcxproj.filters  PHPPaloContext.cpp  PHPPaloContext.h  PHPPaloException.h  PHPPaloLogger.cpp  PHPPaloLogger.h  PHPPaloMessages.cpp  PHPPaloMessages.h  PHPPaloSpreadsheetFuncs.cpp  PHPPaloSpreadsheetFuncs.h  PHPPaloSpreadsheetFuncsWrapper.cpp  PHPPaloSpreadsheetFuncsWrapper.h  PHPPaloVersion.cpp  PHPPaloVersion.h  PHP_5.4.X_WIN.txt  PHP_5.5.X_WIN.txt  ZendArrayBuilderImpl.cpp  ZendArrayBuilderImpl.h  ZendValue.cpp  ZendValue.h  ZendValueException.h  ZendValueIteratorImpl.cpp  ZendValueIteratorImpl.h  ZendValueMessages.cpp  ZendValueMessages.h  aclocal.m4  applyXSLTransformsSUSE.sh  c2c_plus_plus.cpp  c2c_plus_plus.h  configure  configure.ac  fix_zend.h  php_jedox_palo.c  php_jedox_palo.h  php_jedox_palo_cpp.cpp  (+4 more)
molap/client_libraries/5.1/PHPPalo/PHP_5.5.X_WIN_Support/: config.w32.h
molap/client_libraries/5.1/PaloSpreadsheetFuncs/: Bind.h  COPYING  CellValue.cpp  Conversion.cpp  Converter.cpp  ConvertingCell.cpp  ElementListArray.cpp  GenericArgumentArray.cpp  GenericCell.cpp  GenericCellCellSerializer.cpp  GenericCellCellSerializer.h  Makefile.am  PaloSpreadsheetFuncs.vcxproj  PaloSpreadsheetFuncs.vcxproj.filters  Poolable.ipp  QueryCache.cpp  QueryCacheEntryNotFoundException.h  SimpleCell.cpp  SimpleCell.h  SpreadsheetFuncs.cpp  SpreadsheetFuncsBase.cpp  SpreadsheetFuncsMessages.cpp  StringTokenizer.cpp  StringTokenizer.h  TODO  Wrapper.cpp  XLError.cpp  aclocal.m4  configure  configure.ac  namespaces.h
molap/client_libraries/5.1/PaloSpreadsheetFuncs/include/PaloSpreadsheetFuncs/: AbstractLogger.h  AggregationTypes.h  ArgumentException.h  CellValue.h  CellValueArray.h  ConsolidationElement.h  ConsolidationElementArray.h  Conversion.hpp  Converter.hpp  ConvertingCell.h  CubeInfo.h  DatabaseInfo.h  DimensionElementInfo.h  DimensionElementInfoArray.h  DimensionElementType.h  DimensionInfo.h  ElementList.h  ElementListArray.h  ErrorInfo.h  GenericArgumentArray.h  GenericArrayBuilder.h  GenericCell.h  GenericCellException.h  GenericCellIterator.h  GenericContext.h  GoalSeekType.h  IntArray.h  InvalidRequestException.h  LicenseInfo.h  LockInfo.h  Messages.h  PSFException.h  Poolable.h  QueryCache.h  RuleInfo.h  ServerInfo.h  SpreadsheetFuncs.h  SpreadsheetFuncsBase.h  SpreadsheetFuncsException.h  SpreadsheetFuncsMessages.h  (+7 more)
molap/client_libraries/5.1/libpalo2/: Doxyfile  Makefile.am  Makefile.in  arg.cpp  arg.h  arg_generic.c.h  arg_types.h  configure  configure.ac  connect.cpp  connect.h  const.h  conversions.h  error.h  errstack.cpp  errstack.h  generic_mappings.h  hash_table.cpp  hash_table.h  helper.cpp  helper.h  helper_generic.c.h  helper_generic.h.h  interface.cpp  interface.h  interface_generic.c.h  interface_generic.cpp  interface_generic.h  interface_generic.h.h  libpalo2.cpp  libpalo2.def  libpalo2.h  libpalo2.rc  libpalo2.vcxproj  libpalo2.vcxproj.filters  resource.h  stdaliases.cpp  stdaliases.h  strtools.cpp  strtools.h
molap/client_libraries/5.1/libpalo2/config/: compile
molap/client_libraries/5.1/libpalo_ng/source/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  libpalo_ng.cpp  libpalo_ng_version.c
molap/client_libraries/5.1/libpalo_ng/source/Network/: ClientSocket.cpp  ClientSocket.h  NetInitialisation.cpp  Socket.cpp  Socket.h  SocketAddress.cpp  SocketAddress.h  SocketException.cpp
molap/client_libraries/5.1/libpalo_ng/source/Palo/: Cube.cpp  Cubes.cpp  Database.cpp  Dimension.cpp  Dimensions.cpp  Element.cpp  Server.cpp  ServerImpl.cpp  ServerImpl.h  ServerPool.cpp  View.cpp  View.h  types.cpp
molap/client_libraries/5.1/libpalo_ng/source/Util/: CsvLineDecoder.cpp  CsvLineDecoder.h  CsvTokenFromStream.cpp  CsvTokenFromStream.h  StringUtils.cpp
molap/client_libraries/5.1/libpalo_ng/source/config/: config.h.in.cmake
molap/client_libraries/5.1/libpalo_ng/source/m4/: ax_boost.m4
(+2105 files in other folders)
