ACLOCAL_AMFLAGS=-I m4 -I config
AM_CPPFLAGS=-D__UNIX__
lib_LTLIBRARIES = libpalospreadsheetfuncs.la
INCLUDES = -I@top_srcdir@/include
libpalospreadsheetfuncs_la_SOURCES = \
	Converter.cpp \
	Conversion.cpp \
	SpreadsheetFuncsBase.cpp \
	GenericCellCellSerializer.cpp \
	SpreadsheetFuncsMessages.cpp \
	GenericArgumentArray.cpp \
	Wrapper.cpp \
	QueryCache.cpp \
	ElementListArray.cpp \
	StringTokenizer.cpp \
	CellValue.cpp \
	XLError.cpp \
	GenericCell.cpp \
	ConvertingCell.cpp \
	SpreadsheetFuncs.cpp \
	SimpleCell.cpp

#libpalospreadsheetfuncs_la_LDFLAGS = -lpthread
